# Jangolizer

./: .gitignore  .gitignore.save  BUILD_COMPLETE.txt  CMakeLists.txt  CMakePresets.json  DEVELOPMENT.md  LICENSE.md  PROJECT_SUMMARY.md  README.md  VERIFY_BUILD.md  build.sh
.github/: FUNDING.yml
.github/workflows/: tests.yml
Source/: PluginEditor.cpp  PluginEditor.h  PluginEditor_new.cpp  PluginProcessor.cpp  PluginProcessor.h  PolyBLEPOscillator.h
test/: CMakeLists.txt  PluginProcessorTests.cpp  PolyBLEPOscillatorTests.cpp
